--- a/gradle.properties
+++ b/gradle.properties
@@ -21,6 +21,7 @@ kotlin.code.style=official
 # resources declared in the library itself and none from the library's dependencies,
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
+
 # Kill java processes after they run
-org.gradle.daemon=true
-org.gradle.daemon.idletimeout=1
+# org.gradle.daemon=true
+# org.gradle.daemon.idletimeout=1
